# pyzkaccess

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  enums.py  event.py  index.html  lib.py  pyproject.toml  pyzkaccess.py  requirements.txt  run_tests.sh  setup.py  tox.ini
.github/workflows/: commit.yaml  release.yaml
docs/: _config.yml  cli.md  data_tables.md  index.md  installation.md  installing.md  overview.md  quick_start.md  summary.md  usage.md
pdoc_tpl/: config.mako
pyzkaccess/: __init__.py  _setup.py  aux_input.py  cli.py  common.py  ctypes.py  ctypes_.py  device.py  door.py  enum.py  enums.py  event.py  exceptions.py  main.py  param.py  pyzkaccess.py  reader.py  relay.py  sdk.py  tables.py
pyzkaccess/device_data/: __init__.py  model.py  queryset.py  tables.py
site/: 404.html  index.html  sitemap.xml
site/CHANGELOG/: index.html
site/docs/installing/: index.html
site/docs/summary/: index.html
site/docs/usage/: index.html
site/reference/pyzkaccess/: index.html
site/reference/pyzkaccess/aux_input/: index.html
site/reference/pyzkaccess/common/: index.html
site/reference/pyzkaccess/ctypes/: index.html
site/reference/pyzkaccess/device/: index.html
site/reference/pyzkaccess/door/: index.html
site/reference/pyzkaccess/enum/: index.html
site/reference/pyzkaccess/event/: index.html
site/reference/pyzkaccess/exceptions/: index.html
site/reference/pyzkaccess/param/: index.html
site/reference/pyzkaccess/pyzkaccess/: index.html
site/reference/pyzkaccess/reader/: index.html
site/reference/pyzkaccess/relay/: index.html
site/reference/pyzkaccess/sdk/: index.html
site/search/: search_index.json
tests/: conftest.py  test_aux_input.py  test_common.py  test_device.py  test_door.py  test_event.py  test_exceptions.py  test_lib.py  test_main.py  test_param.py  test_pyzkaccess.py  test_reader.py  test_relay.py  test_sdk.py  test_setup_cli.py
tests/device_data/: test_model.py  test_queryset.py  test_tables.py
